--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.3.*",
         "yajra/laravel-datatables-oracle": "~6.0",
         "laravelcollective/html": "5.3.*",
-        "owen-it/laravel-auditing": "^2.4"
+        "owen-it/laravel-auditing": "^2.4",
+        "league/flysystem-aws-s3-v3": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
