--- a/composer.json
+++ b/composer.json
@@ -50,6 +50,8 @@
         ]
     },
     "config": {
-        "preferred-install": "dist"
+        "process-timeout":      600,
+        "preferred-install":    "dist",
+        "github-protocols":     ["https"]
     }
 }
