Minor bug fixes

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,8 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
+
+AWS_S3=https://s3-ap-southeast-1.amazonaws.com/amr-eduhub-upoads/
 PUSHER_KEY=
 PUSHER_SECRET=
 PUSHER_APP_ID=
