--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,7 @@ Homestead.json
 Homestead.yaml
 .env
 /public/uploads
-/public/img
+/public/img/facility
+/public/img/faculty
+/public/img/shortCourse
+/public/img/provider
