--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "owen-it/laravel-auditing": "^2.4",
         "league/flysystem-aws-s3-v3": "^1.0",
         "doctrine/dbal": "^2.5",
-        "laravel/socialite": "^2.0"
+        "laravel/socialite": "^2.0",
+        "maatwebsite/excel": "~2.1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
