--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "league/flysystem-aws-s3-v3": "^1.0",
         "doctrine/dbal": "^2.5",
         "laravel/socialite": "^2.0",
-        "maatwebsite/excel": "~2.1.0"
+        "maatwebsite/excel": "~2.1.0",
+        "phpoffice/phpexcel": "^1.8"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
