Add edit image to admin,add migration to fix user_id bug,edit env.example

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,10 @@ MAIL_ENCRYPTION=null
 
 
 AWS_S3=https://s3-ap-southeast-1.amazonaws.com/amr-eduhub-upoads/
+AWS_S3_KEY=AKIAIIOSH7U5TNUH523A
+AWS_S3_SECRET=quqpV46a4isJcUqg6bpgXpCDbgwIzHWHUCnETll6
+AWS_S3_REGION=ap-southeast-1
+AWS_S3_BUCKET=amr-eduhub-upoads
 
 
 FB_CLIENT_ID=1117194688365055
