--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "maatwebsite/excel": "~2.1.0",
         "phpoffice/phpexcel": "^1.8",
         "symfony/class-loader": "^3.2",
-        "barryvdh/laravel-ide-helper": "^2.2"
+        "barryvdh/laravel-ide-helper": "^2.2",
+        "barryvdh/laravel-debugbar": "^2.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
